# Mouser

./: .gitignore  CGEVENTTAP_CHANGES.md  CONTRIBUTING.md  CONTRIBUTING_DEVICES.md  DEVELOPMENT.md  LogiControl.bat  MEMORY_LEAK_PLAN.md  Mouser-linux.spec  Mouser-mac.spec  Mouser.bat  Mouser.spec  README.md  README_CN.md  README_EN.md  build_macos_app.sh  build_support.py  craft_probe_report.json  install_local.sh  install_macos_app.sh  installer.nsi  main_cli.py  main_qml.py  mouser_daemon_launcher.py  mouser_launcher.py  mouser_ui_launcher.py  pyproject.toml  readme_mac_osx.md  requirements.txt
.claude/: settings.json
.github/: CHANGELOG.md  CONTRIBUTING.md
Casks/: mouser.rb
build_resources/: Mouser.entitlements
core/: accessibility.py  actions_ring.py  app_catalog.py  app_detector.py  autostart.py  config.py  config_validation.py  device_hook.py  device_hook_base.py  device_hook_contract.py  device_hook_linux.py  device_hook_macos.py  device_hook_stub.py  device_hook_types.py  device_hook_windows.py  device_layouts.py  engine.py  gesture_recognizer.py  hid_gesture.py  key_simulator.py  local_control.py  log_setup.py  logi_device_catalog.py  logi_devices.py  macos_daemon.py  mouse_hook.py  mouse_hook_base.py  mouse_hook_contract.py  mouse_hook_linux.py  mouse_hook_macos.py  mouse_hook_types.py  mouse_hook_windows.py  on_demand_ui.py  pan_scroller.py  process_bridge.py  startup.py  updater.py  version.py
images/: AppIcon.icns
scripts/: build_and_install.bat  build_and_install.py  build_and_install_macos_app.sh  install_from_dist.py  update_homebrew_cask.py  (+1 more)
(+55 files in other folders)
